// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignupForm renders 1`] = `
<div>
  <div
    className="layout"
  >
    <header>
      <h1
        className="au-display-xl"
      >
        Let’s get started
      </h1>
    </header>
    <article
      role="main"
    >
      <form
        id="signup"
        method="post"
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <div
          styleName="user-type"
        >
          <div
            className="field"
          >
            <fieldset>
              <legend>
                Have you got digital expertise to sell to government? Or do you want to buy digital products and services on behalf of your government office? Choose the option that matches your situation.
              </legend>
              <div>
                <span>
                  <input
                    checked={false}
                    disabled={false}
                    id="user_type-buyer"
                    name="user_type"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyPress={[Function]}
                    type="radio"
                    value="buyer"
                  />
                  <label
                    htmlFor="user_type-buyer"
                  >
                    <span>
                      Buyer
                      <p>
                        I want to buy on behalf of
                        <br />
                        government.
                      </p>
                    </span>
                  </label>
                </span>
                <span>
                  <input
                    checked={false}
                    disabled={false}
                    id="user_type-seller"
                    name="user_type"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyPress={[Function]}
                    type="radio"
                    value="seller"
                  />
                  <label
                    htmlFor="user_type-seller"
                  >
                    <span>
                      Seller
                      <p>
                        I want to sell digital products or
                        <br />
                        services.
                      </p>
                    </span>
                  </label>
                </span>
              </div>
            </fieldset>
          </div>
        </div>
        Now enter your name and your work email address.
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="name"
          >
            Full name
          </label>
          <input
            className=""
            disabled={false}
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
          />
        </div>
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="email_address"
          >
            Email address
          </label>
          <p
            className="hint"
            id="email_address-hint"
          >
            <br />
          </p>
          <input
            className=""
            disabled={false}
            id="email_address"
            name="email_address"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="email"
          />
        </div>
        <p>
          <small>
            By creating an account you confirm your acceptance of our
            <a
              href="/terms-of-use"
              rel="noopener noreferrer"
              target="_blank"
            >
               Terms of Use
            </a>
            .
          </small>
        </p>
        <input
          type="submit"
          value="Create your account"
        />
      </form>
    </article>
  </div>
</div>
`;

exports[`SignupForm renders with form_options 1`] = `
<div>
  <div
    className="layout"
  >
    <header>
      <h1
        className="au-display-xl"
      >
        Let’s get started
      </h1>
    </header>
    <article
      role="main"
    >
      <form
        id="signup"
        method="post"
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <input
          id="csrf_token"
          name="csrf_token"
          type="hidden"
          value="sometoken"
        />
        <div
          styleName="user-type"
        >
          <div
            className="field"
          >
            <fieldset>
              <legend>
                Have you got digital expertise to sell to government? Or do you want to buy digital products and services on behalf of your government office? Choose the option that matches your situation.
              </legend>
              <div>
                <span>
                  <input
                    checked={false}
                    disabled={false}
                    id="user_type-buyer"
                    name="user_type"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyPress={[Function]}
                    type="radio"
                    value="buyer"
                  />
                  <label
                    htmlFor="user_type-buyer"
                  >
                    <span>
                      Buyer
                      <p>
                        I want to buy on behalf of
                        <br />
                        government.
                      </p>
                    </span>
                  </label>
                </span>
                <span>
                  <input
                    checked={false}
                    disabled={false}
                    id="user_type-seller"
                    name="user_type"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyPress={[Function]}
                    type="radio"
                    value="seller"
                  />
                  <label
                    htmlFor="user_type-seller"
                  >
                    <span>
                      Seller
                      <p>
                        I want to sell digital products or
                        <br />
                        services.
                      </p>
                    </span>
                  </label>
                </span>
              </div>
            </fieldset>
          </div>
        </div>
        Now enter your name and your work email address.
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="name"
          >
            Full name
          </label>
          <input
            className=""
            disabled={false}
            id="name"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
          />
        </div>
        <div
          className="field"
        >
          <label
            className="question-heading"
            htmlFor="email_address"
          >
            Email address
          </label>
          <p
            className="hint"
            id="email_address-hint"
          >
            <br />
          </p>
          <input
            className=""
            disabled={false}
            id="email_address"
            name="email_address"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="email"
          />
        </div>
        <p>
          <small>
            By creating an account you confirm your acceptance of our
            <a
              href="/terms-of-use"
              rel="noopener noreferrer"
              target="_blank"
            >
               Terms of Use
            </a>
            .
          </small>
        </p>
        <input
          type="submit"
          value="Create your account"
        />
      </form>
    </article>
  </div>
</div>
`;
